--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -220,6 +220,110 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Wed May 05 2010 Chris Lumens <clumens@redhat.com> - 14.5-1
+- Link /sbin/reboot and /sbin/halt to /sbin/init on s390x (#571370) (dcantrell)
+- Don't clear bootloader radio selection on double click (#588771). (clumens)
+- Add support to livecd for arbitrarily complex dir structures. (#504986)
+  (dlehman)
+- Grab everything in $LIBDIR/rsyslog/ (pjones)
+- Do not automatically backtrace when telnetd quits (#588964). (clumens)
+- Share terminology between the cleardisks text and panel headers (#587879).
+  (clumens)
+- Allow displaying groups that only contain conditional packages (#475239).
+  (clumens)
+- Fix hasWindows() to actually work as advertised (hdegoede)
+- Revert commit 27a4c7df871744454d1ca8979a576f9f45c67189 (hdegoede)
+- Make deviceNameToDiskByPath check udev info instead of sysfs (dcantrell)
+- Fix some minor problems in storage/dasd.py (#560702) (dcantrell)
+- Read in network settings correctly, as configured by linuxrc.s390 (dcantrell)
+- Clean up wording for oversized LVs (#587459) (dcantrell)
+- Teach upd-instroot about i686 (jkeating)
+- Make the rule for 70-anaconda.rules in updates.img be generic. (pjones)
+- Do not use --quiet and --nostart when doing selinux configuration (#568528)
+  (msivak)
+- Tell dracut it should activate the first swap device (#572771) (hdegoede)
+- Remove broken hasWindows function from bootloader.py and its callers
+  (hdegoede)
+- booty: remove dead code chunk (hdegoede)
+- Don't add recovery partitions to the grub boot menu (#534066) (hdegoede)
+- Use g_str_has_suffix() to check end of string (dcantrell)
+- Find stage2 install.img on local hd installs (dcantrell)
+- gui: gray out OK button while adding raid set (#587161). (akozumpl)
+- Strip quoting from OPTIONS when composing rd_CCW line (#577193). (dcantrell)
+- Default the global grub timeout to 5 for serial (jkeating)
+- Print out device sizes in list-harddrives-stub as well (#587395). (clumens)
+- Make sure a given path exists before calling os.statvfs on it (#587662).
+  (clumens)
+- Wait for scsi adapters to be done with scanning their busses (#583143)
+  (hdegoede)
+- Set CURL_FAILONERROR to catch url download errors (#586925) (dcantrell)
+- Bring up network for local hd vnc kickstart installs (#522064) (dcantrell)
+- gui: no close buttons etc. in window decoration (#582645) (akozumpl)
+- Don't clear BIOS RAID member disks (#587066) (hdegoede)
+- Remove devices from libparted's cache when destroying them (#586622)
+  (hdegoede)
+- Offer to format unformatted DASD devices (#560702) (dcantrell)
+- X input configuration has moved to /usr/share (#585621). (clumens)
+- Disable button icons on stock GTK buttons (#579701). (akozumpl)
+- Remove button icons from the glade files (#579701). (akozumpl)
+- Don't traceback on CD-ROM driver in list-harddrives-stub (#586410). (clumens)
+- Fetch ks files over NFS when ksdevice is not given (#541873) (dcantrell)
+- put liveinst/console.apps/liveinst.h in .gitignore (akozumpl)
+- Remove the README files (#583408). (clumens)
+- Make it more clear what the purpose of the "Boot" column is (#584811).
+  (clumens)
+- nfs: off by one error leaves extra slash in a path. (akozumpl)
+- removal: umountStage2(). (akozumpl)
+- nfs: direct mounting of stage2. (akozumpl)
+- loader: strip trailing slash character from stage2= URL. (akozumpl)
+- imount: allow bind mounts. (akozumpl)
+- Make sure we use 1.0 mdraid metadata when the set is used for boot (#584596)
+  (hdegoede)
+- Add a preCommitFixup hook to StorageDevice classes (hdegoede)
+- Check for not having found any disks after populating the tree (#583906)
+  (hdegoede)
+- Prune resize and format create/migrate actions if destroying a device.
+  (dlehman)
+- Schedule actions when removing existing extended partitions. (#568219)
+  (dlehman)
+- Don't try to zero out extended partitions. (dlehman)
+- lvm: check resizing against format's targetSize (#580171). (akozumpl)
+- Restore storage.clearPartType after reset when backing out of GUI. (#559233)
+  (dlehman)
+- Make Cancel button the default for 'Weak Password' dialog (#582660) (bcl)
+- Set Create Storage focus to first active radio button (#582676) (bcl)
+- BaseInstallClass no longer has a setInstallData method. (clumens)
+- livecd.py: set the selected keyboard (#583289). (akozumpl)
+- Make rhel.py an installclass that we can inherit from for variants. (notting)
+- Don't make all devices on the boot device selector immutable (#583028).
+  (clumens)
+- Don't allow running as non-root (#583213). (clumens)
+- Careful with that WINDOW_TYPE_HINT_DESKTOP, Eugene. (#582998) (akozumpl)
+- Introduce flags.preexisting_x11. (akozumpl)
+- Fix some HIG problems with the "Write Changes" dialog (#583405). (clumens)
+- Fix up some HIG problems with the betanag dialog (#583404). (clumens)
+- Fixup P_ usage in questionInitializeDASD (hdegoede)
+- Prevent low-level formatting of DASDs in rescue mode (#582638) (hdegoede)
+- Move the question about formatting DASD's to the interface class (hdegoede)
+- Let the user know if adding a zfcp drive fails (#582632) (hdegoede)
+- Fixup P_ usage in installinterfacebase (hdegoede)
+- Check for presence of filesystem module in FS.mountable (#580520) (dcantrell)
+- Check for fs utils when determining if an fs can be resized (#572431)
+  (dcantrell)
+- Select "Advanced Storage Devices" by default on s390 (#580433). (clumens)
+- Don't sigsegv on stage2= derived from invalid repo= parameter (#574746).
+  (rvykydal)
+- Removed the tooltips showing glade.gnome.org link (#566773) (mgracik)
+- Better filter for commits to ignore for the RPM changelog. (dcantrell)
+- In groupListExists, log what groups don't exist. (notting)
+- Do not append "rhgb quiet" to s390 boot loader config (#570743) (dcantrell)
+- No instdata on master anymore. (anaconda.id -> anaconda) (dlehman)
+- Try to get boot reqs onto the selected boot device. (#560387) (dlehman)
+- Ensure proper disklabel type on boot disk if CLEARPART_TYPE_ALL. (#570483,
+  #530225) (dlehman)
+- Add proper support for destruction of disklabels. (dlehman)
+- Three small fixes to action sorting. (dlehman)
+
 * Thu Apr 15 2010 Chris Lumens <clumens@redhat.com> - 14.4-1
 - There is no rhbz list for non rhel branch builds. (dcantrell)
 - pylint up, pychecker down. (clumens)
