Rename geninitrdsz.c to addrsize.c (#546422)
Rename the geninitrdsz.c program to addrsize.c to more accurately
reflect what it's generating.  Update Makefile.am and its usage in the
buildinstall scripts.  The load address is provided as a shell variable
in scripts/mk-images.s390.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -24,7 +24,7 @@ noinst_PROGRAMS     = snarffont
 dist_noinst_SCRIPTS = filtermoddeps
 
 if IS_S390
-utils_PROGRAMS      += geninitrdsz mk-s390-cdboot
+utils_PROGRAMS      += addrsize mk-s390-cdboot
 endif
 
 modlist_CFLAGS      = -I$(top_srcdir)/loader $(GLIB_CFLAGS)
