Add non-branded default liveinst icons for anaconda (#588737)
Default icons for the liveinst link on the desktop.  The *-logos
packages can override this icon, but anaconda is apparently supposed to
be providing a default one.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = isys po loader booty storage textw utils scripts bootdisk \
           installclasses iw command-stubs ui docs pixmaps tests fonts \
-          gptsync liveinst
+          gptsync liveinst icons
 
 EXTRA_DIST = config.rpath COPYING \
              lang-table \
