Find tests using python-nose and create make unittest target

--- a/Makefile.am
+++ b/Makefile.am
@@ -103,3 +103,7 @@ updates:
 
 # DEPRECATED TARGETS:
 archive-no-tag: dist
+
+# UNIT TESTING TARGETS
+unittest:
+	PYTHONPATH=tests/:. nosetests -w tests/
