Make vesa and rescue options available in UEFI (#576828)
Add some more menu items. Weee!

--- a/bootdisk/x86_64/grub.conf
+++ b/bootdisk/x86_64/grub.conf
@@ -3,6 +3,12 @@ default=0
 splashimage=@SPLASHPATH@
 timeout 5
 hiddenmenu
-title @PRODUCT@ @VERSION@
+title Install or upgrade an existing system
 	kernel @KERNELPATH@ askmethod
+	initrd @INITRDPATH@
+title Install system with basic video driver
+	kernel @KERNELPATH@ xdriver=vesa nomodeset askmethod
+	initrd @INITRDPATH@
+title rescue
+	kernel @KERNELPATH@ rescue askmethod
 	initrd @INITRDPATH@
