--- a/isys/Makefile.am
+++ b/isys/Makefile.am
@@ -21,7 +21,7 @@ pkgpyexecdir = $(pyexecdir)/py$(PACKAGE_NAME)
 
 ISYS_SRCS = devices.c imount.c cpio.c uncpio.c lang.c \
             isofs.c linkdetect.c vio.c ethtool.c eddsupport.c iface.c \
-            auditd.c log.c
+            auditd.c log.c mem.c
 
 dist_noinst_HEADERS = *.h
 
